--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,89 @@
-p {
-    margin-top: 10px;
+.gif {
+    margin-top: 20px;
+    margin-right: 20px;
+    float: left;
 }
 
 button {
     margin-left: 10px;
     border-radius: 5px;
     margin: 10px;
+    border: 4px rgb(102, 32, 50) solid;
+    background-color: rgb(23, 69, 102);
+    color: white;
+}
+
+form {
+    border: 2px rgb(102, 32, 50) solid;
+    display: inline-block;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+body {
+     background: url(https://wallpapercave.com/wp/wp2617738.jpg); background-repeat: no-repeat ;
+  background-size: auto; 
+  background-attachment: fixed;
+}
+
+.gifs-here {
+    background-color: rgba(0, 0, 255, 0);
+}
+
+.searchRef {
+    color: white;
+}
+
+.add-gif {
+    margin: 5px;
+    background-color: rgb(102, 32, 50);
+    border: 5px rgb(23, 69, 102) double;
+    border-radius: 5px;
+    color: white;
+}
+
+p {
+    color: white;
+    margin-left: 10px;
+    
+}
+
+img {
+    border: 2px rgb(102, 32, 50) solid;
+    margin-left: 10px;
+    
+}
+
+.gif-input {
+    margin-left: 5px;
+    border: 3px rgb(102, 32, 50) solid;
+}
+
+@media screen and (min-width: 980 px) {
+   body {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+   } 
+}
+@media screen and (max-width: 980px) {
+    body {
+        background-size: 100%;
+        background-repeat: no-repeat ;
+        background-attachment: fixed;
+    }
+}
+@media screen and (max-width: 830px) {
+    body {
+        background-size: 100%;
+        background-repeat: repeat;
+        background-attachment: fixed;
+    }
+}
+@media screen and (max-width: 640px) {
+    body {
+        background-size: 100%;
+        background-repeat: repeat;
+        background-attachment: fixed;
+    }
 }
